human-intervention-logs/com.sun.jersey.jersey-test-framework:jersey-test-framework-core:1.18/gradle-test/gradle-test-2026-06-07T05-41-45-237952Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.sun.jersey.jersey-test-framework:jersey-test-framework-core:1.18
Command: `/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/tests/src/com.sun.jersey.jersey-test-framework/jersey-test-framework-core/1.18/src/test/java/com_sun_jersey_jersey_test_framework/jersey_test_framework_core/JerseyTestTest.java:20: error: JerseyTestTest is not abstract and does not override abstract method supports() in TestContainerFactory
public class JerseyTestTest implements TestContainerFactory {
       ^
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/tests/src/com.sun.jersey.jersey-test-framework/jersey-test-framework-core/1.18/src/test/java/com_sun_jersey_jersey_test_framework/jersey_test_framework_core/JerseyTestTest.java:52: error: name clash: supports() in JerseyTestTest and supports() in TestContainerFactory have the same erasure, yet neither overrides the other
    public <T extends AppDescriptor> Class<T> supports() {
                                              ^
/home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/tests/src/com.sun.jersey.jersey-test-framework/jersey-test-framework-core/1.18/src/test/java/com_sun_jersey_jersey_test_framework/jersey_test_framework_core/JerseyTestTest.java:51: error: method does not override or implement a method from a supertype
    @Override
    ^
3 errors

[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/tests/src/com.sun.jersey.jersey-test-framework/jersey-test-framework-core/1.18/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/tests/src/com.sun.jersey.jersey-test-framework/jersey-test-framework-core/1.18/src/test/java/com_sun_jersey_jersey_test_framework/jersey_test_framework_core/JerseyTestTest.java:52: error: name clash: supports() in JerseyTestTest and supports() in TestContainerFactory have the same erasure, yet neither overrides the other
      public <T extends AppDescriptor> Class<T> supports() {
                                                ^
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/tests/src/com.sun.jersey.jersey-test-framework/jersey-test-framework-core/1.18/src/test/java/com_sun_jersey_jersey_test_framework/jersey_test_framework_core/JerseyTestTest.java:20: error: JerseyTestTest is not abstract and does not override abstract method supports() in TestContainerFactory
  public class JerseyTestTest implements TestContainerFactory {
         ^
  /home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/tests/src/com.sun.jersey.jersey-test-framework/jersey-test-framework-core/1.18/src/test/java/com_sun_jersey_jersey_test_framework/jersey_test_framework_core/JerseyTestTest.java:51: error: method does not override or implement a method from a supertype
      @Override
      ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 13s
14 actionable tasks: 6 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/jovan/Work/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6952-824be21e/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.sun.jersey.jersey-test-framework:jersey-test-framework-core:1.18 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 15s
9 actionable tasks: 1 executed, 8 up-to-date
